agregandotest en AbstractResource para todas las entidades con mock